--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "tsc",
         "dev": "nodemon --exec ts-node server.ts",
         "start": "npm run build && node build/server.js",
-        "cleanup-tokens": "pm2 start pm2.config.js"
+        "pm2": "pm2 start pm2.config.js",
+        "cleanup-tokens": "node ./build/src/service/tokens/tokenCleanupService.js "
     },
     "author": "Anar Safarov",
     "license": "ISC",
