--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "tsc",
+        "build": "tsc && node copy-assets.js",
         "dev": "nodemon --exec ts-node server.ts",
         "start": "npm run build && node build/server.js",
         "pm2": "pm2 start pm2.config.js",
@@ -22,6 +22,7 @@
         "express": "^4.18.2",
         "express-rate-limit": "^6.9.0",
         "firebase": "^10.2.0",
+        "fs-extra": "^11.1.1",
         "joi": "^17.9.2",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.4.3",
@@ -41,6 +42,7 @@
         "@types/cors": "^2.8.13",
         "@types/ejs": "^3.1.2",
         "@types/express": "^4.17.17",
+        "@types/fs-extra": "^11.0.1",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/multer": "^1.4.7",
         "@types/node": "^20.5.1",
